--- a/vasca/examples/gPhoton_mod/gPhoton_TDEs_SNe.ipynb
+++ b/vasca/examples/gPhoton_mod/gPhoton_TDEs_SNe.ipynb
@@ -757,9 +757,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc_uvva_venv399",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "uc_uvva_venv399"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -771,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
