Modified load_products from MAST
Former-commit-id: d53db20404e0b8b189a5dec2766db154a8fb21a4

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -34,7 +34,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "\n",
-    "region_name = \"TDS_ELAI\"\n",
+    "region_name = \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\""
    ]
   },
@@ -56,7 +56,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=7</i>\n",
-       "<table id=\"table140066662459728\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139957089150880\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -91,7 +91,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=432</i>\n",
-       "<table id=\"table140068032232368\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139958422773216\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -169,7 +169,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140066662459824\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139957089386944\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th><th>fd_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th><th>int32[1]</th></tr></thead>\n",
@@ -192,7 +192,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140066676060464\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139958458786016\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -215,7 +215,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=9</i>\n",
-       "<table id=\"table140066662450656\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139957089401056\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>vis_id</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>s2n</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>mag</th><th>mag</th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ea15877e4aa479a88a2f32643d125df",
+       "model_id": "53a2c6b9ea9946e4a071b90d887fc20d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,9 +304,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19a19a3d355a48cda820d0abe9cd19cc",
+       "model_id": "de2f1e9811114180a868e735dc1fa0b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,6 +338,7 @@
    ],
    "source": [
     "fd = rg.get_field(field_id=src_ps1tde.tt_fields[0][\"field_id\"], load_method=\"FITS\", add_field=True)\n",
+    "print(fd.vis_img)\n",
     "fd_src_id = src_ps1tde.tt_fields[\"fd_src_id\"][0]\n",
     "\n",
     "fig, ax = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = fd.get_sky_region()) # \n",
@@ -355,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d2b32442b8400e956b7f0e2d72ae41",
+       "model_id": "5534737eccfc4cc8857fe713585b9009",
        "version_major": 2,
        "version_minor": 0
       },
@@ -450,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28039c72f68d44d990f7380188db2658",
+       "model_id": "a24e15d5af054534ae8b0edf6ac722e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,7 +483,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fff5631ff8d43af9ad4852471457f05",
+       "model_id": "935e2b4153b046c2915fcd0c29250171",
        "version_major": 2,
        "version_minor": 0
       },
@@ -524,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "993a6cc04b514c6aa0ae88291d860847",
+       "model_id": "8b8550c688f04c2f911ffb273d45b720",
        "version_major": 2,
        "version_minor": 0
       },
@@ -578,7 +586,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "315463ca6afa405188ebe406cfae2fec",
+       "model_id": "2473aa9644db417fa704aba976c08dd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -655,7 +663,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cde4b3631c424047b0a40800ff14bbaf",
+       "model_id": "be7844b14e9f4fd7a3b6f790a83193bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -725,7 +733,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cfb23b959dd4c6e8720409a7c690070",
+       "model_id": "49bea5275e644d8b9adae95e7e568645",
        "version_major": 2,
        "version_minor": 0
       },
@@ -798,7 +806,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b52296611eec49cdb682806bc16e8cea",
+       "model_id": "df62fd394f7e4f2196469050eb2b26ec",
        "version_major": 2,
        "version_minor": 0
       },
