--- a/vasca/examples/compare_TDS_VASCA_Rolf.ipynb
+++ b/vasca/examples/compare_TDS_VASCA_Rolf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "d172ab11-fe07-420d-b8bd-2b6d53e4eb71",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "eeb559f1-2976-4f25-b236-35fa9e1ed538",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=7</i>\n",
-       "<table id=\"table140479058965312\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139839979857104\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "region_name = \"TDS_ELAI\"\n",
+    "region_name = \"TDS_ELAISN1\"\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "7cd24d9c-df6b-4e07-bb83-f22075473823",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140479058956672\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139840275376272\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>tds_recno</th><th>tds_idx</th><th>tds_dist</th><th>tds_match</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th><th>int32</th><th>int64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -127,7 +127,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140479058961616\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139840366198448\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>recno</th><th>ID</th><th>ra</th><th>dec</th><th>l_mlow</th><th>mlow</th><th>l_Dmmax</th><th>Dmmax</th><th>l_sigint</th><th>sigint</th><th>l_Sd</th><th>Sd</th><th>l_Sy</th><th>Sy</th><th>LC</th><th>Mph</th><th>rmag</th><th>OT</th><th>z</th><th>X</th><th>Class</th><th>rg_src_id</th><th>vasca_idx</th><th>vasca_dist</th><th>vasca_match</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>bytes16</th><th>float64</th><th>float64</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>bytes3</th><th>float32</th><th>bytes3</th><th>float32</th><th>bytes1</th><th>bytes12</th><th>int32</th><th>int64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "6e327be7-34f3-453c-b395-e59c4cb32507",
    "metadata": {
     "scrolled": true,
@@ -208,7 +208,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=10</i>\n",
-       "<table id=\"table140479058953696\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139840307087776\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>recno</th><th>ID</th><th>ra</th><th>dec</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>bytes16</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "275db800-969e-4a69-9dff-63cd530439d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "682c3554ce8547cc861f31bd6f46ed49",
+       "model_id": "4fc6119f3ef749e0a216e8adf067aad0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "d0e2b450-7aaf-4ac2-a446-77b574b7b673",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57883e5588424c9ea8075e6f692cb4cb",
+       "model_id": "5f8df023f1164b0b8bbe63655549a7e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "915a73bcd046458db3c4dca62d19c5d8",
+       "model_id": "c19feb8f6aed4fba81c3666a571746e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2806566f80fe4ae5a4c54062ac7b7bc4",
+       "model_id": "a9cb2879b29a4aa78fb61c7e0b52f872",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "012dde3f-813e-440f-8fc1-b2e3b0c8c7ba",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=560</i>\n",
-       "<table id=\"table140478732197776\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139839959331792\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>vis_id</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>s2n</th><th>sel</th><th>det_id</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>mag</th><th>mag</th><th></th><th></th><th></th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int64</th><th>float32</th><th>int64</th><th>float32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "d32862d2-d12b-4904-9bfd-1800c72b52fc",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140478737826960\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139839959562080\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th></tr></thead>\n",
