Improved light curve plotting
Former-commit-id: 7ac64fb18e9b356333672f179a69ea10f80490ae

--- a/vasca/examples/compare_TDS_VASCA_Rolf.ipynb
+++ b/vasca/examples/compare_TDS_VASCA_Rolf.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "59525c5b-fe82-4037-ac36-e1cd49b9ec5f",
+   "metadata": {},
+   "source": [
+    "# Compare Time DOmaiin Survey and VASCA catalogs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "d172ab11-fe07-420d-b8bd-2b6d53e4eb71",
    "metadata": {},
    "outputs": [],
@@ -31,12 +39,12 @@
    "id": "3937da23-9e0b-4c02-94be-ceb7d60f6b8a",
    "metadata": {},
    "source": [
-    "Load VASCA region"
+    "### Load VASCA region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "eeb559f1-2976-4f25-b236-35fa9e1ed538",
    "metadata": {},
    "outputs": [
@@ -44,7 +52,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=42</i>\n",
-       "<table id=\"table140214444711920\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140374445629376\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes22</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -101,12 +109,12 @@
    "id": "e432b571-6e7b-4761-ba21-e4be51705742",
    "metadata": {},
    "source": [
-    "Get TDS & VASCA data and match them positionally"
+    "### Get TDS & VASCA data and match them positionally"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "7cd24d9c-df6b-4e07-bb83-f22075473823",
    "metadata": {},
    "outputs": [
@@ -114,7 +122,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140214444515936\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140372458182384\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>tds_recno</th><th>tds_idx</th><th>tds_dist</th><th>tds_match</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int32</th><th>int32</th><th>int32</th><th>int32</th><th>int64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -139,7 +147,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140214444516560\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140373075985168\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>recno</th><th>ID</th><th>ra</th><th>dec</th><th>l_mlow</th><th>mlow</th><th>l_Dmmax</th><th>Dmmax</th><th>l_sigint</th><th>sigint</th><th>l_Sd</th><th>Sd</th><th>l_Sy</th><th>Sy</th><th>LC</th><th>Mph</th><th>rmag</th><th>OT</th><th>z</th><th>X</th><th>Class</th><th>rg_src_id</th><th>vasca_idx</th><th>vasca_dist</th><th>vasca_match</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>bytes16</th><th>float64</th><th>float64</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>float32</th><th>bytes1</th><th>bytes3</th><th>float32</th><th>bytes3</th><th>float32</th><th>bytes1</th><th>bytes12</th><th>int32</th><th>int64</th><th>float64</th><th>bool</th></tr></thead>\n",
@@ -199,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "6e327be7-34f3-453c-b395-e59c4cb32507",
    "metadata": {
     "scrolled": true,
@@ -220,7 +228,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=10</i>\n",
-       "<table id=\"table140214503522464\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140373071838656\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>recno</th><th>ID</th><th>ra</th><th>dec</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>bytes16</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -274,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "275db800-969e-4a69-9dff-63cd530439d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe73fc278f2643fc87f34b8b01b0221a",
+       "model_id": "2bef51bb6a604544ae3db65dd348a0ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "d0e2b450-7aaf-4ac2-a446-77b574b7b673",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8fd845861d6439eb972cd1a7fdc01cf",
+       "model_id": "b56490f9834a45aa9f520d9c211e55d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "611c598f4b2c474b94dfb784ce282114",
+       "model_id": "0ae16a64048c463fb3ab14e87250c34b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79769abfb06244ee91f4c1c481b3223e",
+       "model_id": "dca6ea98245d408e97df4ddac195757e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "012dde3f-813e-440f-8fc1-b2e3b0c8c7ba",
    "metadata": {},
    "outputs": [
@@ -421,7 +429,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=0</i>\n",
-       "<table id=\"table140214432570800\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140372804395712\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>vis_id</th><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err</th><th>mag</th><th>mag_err</th><th>s2n</th><th>sel</th><th>det_id</th><th>r_fov</th><th>artifacts</th><th>point_src_prob</th><th>bright_match</th><th>flux_f60</th><th>flux_f60_err</th><th>flux_f38</th><th>flux_f38_err</th><th>E_bv</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>mag</th><th>mag</th><th></th><th></th><th></th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th><th>int64</th><th>float32</th><th>int64</th><th>float32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "d32862d2-d12b-4904-9bfd-1800c72b52fc",
    "metadata": {},
    "outputs": [
@@ -478,7 +486,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=1</i>\n",
-       "<table id=\"table140213819223888\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140372778348368\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>ra</th><th>dec</th><th>pos_err_mean</th><th>pos_err</th><th>pos_var</th><th>nr_det</th><th>nr_uls</th><th>mag_mean</th><th>mag_err_mean</th><th>mag_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>mag_dmax</th><th>mag_dmax_abs</th><th>mag_dmax_sig</th><th>ul_weight</th><th>mag_sig_int2</th><th>mag_skew</th><th>sel</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th><th></th><th>mag</th><th>mag</th><th>mag2</th><th></th><th></th><th>mag</th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>bool</th></tr></thead>\n",
@@ -506,14 +514,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7ffc452-4cfe-44e8-9c33-97776359aa57",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d40c3cb0-1810-42e4-aa73-bd89374943f3",
    "metadata": {},
    "outputs": [],
    "source": []
