--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,15 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "\n",
+    "from vasca.utils import mag2flux\n",
+    "\n",
     "#Setup region and plotting paramters\n",
     "region_name = \"TDS_ELAISN1\"\n",
     "\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"mag\",\"flux_cpval\",\"mag_var_ex\",\"flux_rchiq\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_var_ex\",\"nr_det\",\"mag\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
-    "sort_par = \"rg_src_id\" # \"mag\" #\"rg_src_id\" #\n",
+    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"ra\",\"dec\",\"pos_err\",\"pos_nxv\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\"]\n",
+    "sort_par = \"rg_src_id\" # \"flux\" #\"rg_src_id\" #\n",
     "\n",
     "#Load region\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
@@ -52,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf68aa6276ee459a9acc9fbaa679f500",
+       "model_id": "10ad156034944cddbf499b8d0693d2ac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=38, description='block_nr', max=77), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=14, description='block_nr', max=28), Output()), _dom_classes=('widget-in…"
       ]
      },
      "metadata": {},
@@ -73,12 +75,13 @@
    ],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
-    "fig_lc = plt.figure(\"Light curves\",figsize=(10, 6), constrained_layout=True)\n",
+    "fig_lc = plt.figure(\"Light curves\",figsize=(10, 9), constrained_layout=True)\n",
+    "flux_ylim = mag2flux([24.5,14.5])/1e-6\n",
     "def plot_lc_range(block_nr):\n",
     "    plt.cla()\n",
     "    lc_min = lc_block_srcs * block_nr\n",
     "    lc_max = lc_min + lc_block_srcs if lc_min + lc_block_srcs<=nr_srcs-1 else nr_srcs-1\n",
-    "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max]) #, ylim = [25,15]\n",
+    "    vvis.plot_light_curve(rg,fig=fig_lc, rg_src_ids = tt_srcs[\"rg_src_id\"][lc_min:lc_max],ylim = flux_ylim.value ) #, \n",
     "    plt.show()\n",
     "    display(tt_srcs[lc_min:lc_max][show_lc_pars])\n",
     "widgets.interactive( plot_lc_range, block_nr=(0,nr_blocks-1))"
@@ -101,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c63b5c4a267d427183ae59859072989b",
+       "model_id": "60899506f2b042d397fe749dd5c383d0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3, description='rg_fd_id', max=6), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='rg_fd_id', max=1), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "metadata": {},
