Adjusted cut values
Former-commit-id: a44c767588c013be5949af2cd8ed15d79b3c8992

--- a/vasca/examples/display_sources.ipynb
+++ b/vasca/examples/display_sources.ipynb
@@ -27,7 +27,7 @@
     "from vasca.utils import mag2flux\n",
     "\n",
     "#Setup region and plotting paramters\n",
-    "region_name = \"TDS_ELAISN1\"\n",
+    "region_name = \"TDS\" #_ELAISN1\n",
     "\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\"]\n",
@@ -61,12 +61,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6f3c2cca50a450ab9337c2d9f63cc11",
+       "model_id": "1aa57c4228fa45958d9f4eacdb2f58cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=22, description='block_nr', max=44), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=195, description='block_nr', max=390), Output()), _dom_classes=('widget-…"
       ]
      },
      "metadata": {},
@@ -75,7 +75,7 @@
    ],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
-    "fig_lc = plt.figure(\"Light curves\",figsize=(10, 9), constrained_layout=True)\n",
+    "fig_lc = plt.figure(\"Light curves\",figsize=(10, 9)) #, constrained_layout=False\n",
     "flux_ylim = mag2flux([24.5,14.5])/1e-6\n",
     "def plot_lc_range(block_nr):\n",
     "    plt.cla()\n",
@@ -104,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8bc89bccc254ac69f68da7e03534e96",
+       "model_id": "714fafaaac7b40f28e47db111a08c648",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=3, description='rg_fd_id', max=6), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=20, description='rg_fd_id', max=41), Output()), _dom_classes=('widget-in…"
       ]
      },
      "metadata": {},
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "fig_skymap = plt.figure(\"Sky map\",figsize=(8, 7), constrained_layout=True)\n",
+    "fig_skymap = plt.figure(\"Sky map\",figsize=(8, 7)) #, constrained_layout=True\n",
     "rg.tt_sources.add_index(\"rg_src_id\")\n",
     "def plot_sky_field(rg_fd_id):\n",
     "    plt.cla()\n",
